# icky

./: Cargo.toml
crates/icky/: Cargo.toml
crates/icky/src/: error.rs  lib.rs  main.rs  syntax.rs
crates/icky/src/syntax/: lexer.rs
examples/: 000_000.ick
