[package]
name = "icky"
description = "Icky programming language."
# Inherit remaining properties from the workspace.
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
peg = "0.8.4"
